--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,9 @@
         <img id="logo" src="/static/images/Big_logo.png" alt="hotel_logo">
         <h1>Welcome to Hotel Reservation System</h1>
         <h5>For our Advance Software Course</h5>
+        <a href="{{ url_for('logout') }}">
+            <button>Logout</button>
+        </a>
     </div>
     
     <div>
