--- a/templates/edit_reservation.html
+++ b/templates/edit_reservation.html
@@ -7,40 +7,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/table.css') }}" rel="stylesheet">
     <title>Edit Reservation</title>
-
-
-
-    <style>
-        
-
-    </style>
 </head>
 <body>
     <div class="head">
+        <img id="logo" src="/static/images/Big_logo.png" alt="hotel_logo">
         <h1>Edit Reservation</h1>
+        <h5>Make changes to your existing reservation</h5>
     </div>
-    
-    <form method="POST">
-        <label>Name:</label>
-        <input type="text" name="name" value="{{ reservation[1] }}" required><br>
-        <label>Room:</label>
-        <select name="room_id" required>
-            {% for room in rooms %}
-            <option value="{{ room[0] }}" {% if room[0] == reservation[2] %}selected{% endif %}>
-                {{ room[1] }} - ${{ room[2] }}
-            </option>
-            {% endfor %}
-        </select><br>
-        <label>Number of Guests:</label>
-        <input type="number" name="guests" value="{{ reservation[3] }}" required><br>
-        <label>Start Date:</label>
-        <input type="date" name="start_date" value="{{ reservation[4] }}" required><br>
-        <label>End Date:</label>
-        <input type="date" name="end_date" value="{{ reservation[5] }}" required><br>
-        <button type="submit">Save Changes</button>
-    </form>
-    <a href="/">Back to Home</a>
+
+    <div style="text-align:center; margin-top: 20px;">
+        <form method="POST">
+            <label>Name:</label>
+            <input type="text" name="name" value="{{ reservation[1] }}" required><br>
+            <label>Room:</label>
+            <select name="room_id" required>
+                {% for room in rooms %}
+                <option value="{{ room[0] }}" {% if room[0] == reservation[2] %} selected {% endif %}>{{ room[1] }} - ${{ room[2] }}</option>
+                {% endfor %}
+            </select><br>
+            <label>Number of Guests:</label>
+            <input type="number" name="guests" value="{{ reservation[3] }}" required><br>
+            <label>Start Date:</label>
+            <input type="date" name="start_date" value="{{ reservation[4] }}" required><br>
+            <label>End Date:</label>
+            <input type="date" name="end_date" value="{{ reservation[5] }}" required><br>
+            <button type="submit">Save Changes</button>
+        </form>
+    </div>
+
+    <div style="text-align:center; margin-top: 20px;">
+        <a href="/">Back to Home</a>
+    </div>
 </body>
 </html>
