Backend and frontend has been completed
Now the system is in a usable state having fixes in the forget password and including an admin page where the admin can view the reserved bookings.
Bug fixes in terms of editing and canceling the reservation were also included.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -56,6 +56,12 @@ body {
     text-transform: uppercase;
 }
 
+
+#main_header{
+    margin: 0%;
+    padding: 0%;
+}
+
 h1, h2, h3 {
     
     text-align: center;
