--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/forms.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
+    
+    <style>
+        body{
+            text-align: center;
+            
+        }
+        h1{
+            margin-top: 2%;
+        }
+        table{
+            margin-right: auto;
+            margin-left: auto;
+            border: black solid 2px;
+            margin-top: 2%;
+            padding: 5%;
+            width: 80%;
+        }
+        thead, tbody, td{
+            padding: 1%;
+            border: solid black 1px;
+        }
+        a button{
+            margin-top: 1%;
+        }
+    </style>
 </head>
 <body>
+
+    <div class="head">
+        <img id="logo" src="/static/images/Big_logo.png" alt="hotel_logo">
+        <h1>Welcome to Hotel Reservation System</h1>
+        <h5>For our Advance Software Course</h5>
+        
+    </div>
+
     <h1>Admin Dashboard</h1>
     <table border="1">
         <thead>
