--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -75,7 +75,7 @@
                     {% endfor %}
                 </select><br>
                 <label>Number of Guests:</label>
-                <input type="number" name="guests" class="form-control" required><br>
+                <input type="number" name="guests" class="form-control" min="1" max="5" required><br>
                 <label>Start Date:</label>
                 <input type="date" name="start_date" class="form-control" required><br>
                 <label>End Date:</label>
