--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,28 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/forms.css') }}" rel="stylesheet">
+
+
+    <style>
+        .submit_btn{
+            width:fit-content;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 10%;
+        }
+    </style>
+    
 </head>
 <body>
-    <h1>Sign In</h1>
-    <form method="POST" action="{{ url_for('signin') }}">
-        <label for="identifier">Email or Username:</label>
-        <input type="text" id="identifier" name="identifier" required><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-        <button type="submit">Sign In</button>
-    </form>
 
-    <p>Don't have an account?</p>
-    <a href="{{ url_for('signup') }}">
-        <button>Sign Up</button>
-    </a>
+    <div class="head">
+        <img id="logo" src="/static/images/Big_logo.png" alt="hotel_logo">
+        <h1>Welcome to Hotel Reservation System</h1>
+        <h5>For our Advance Software Course</h5>
+        <a href="{{ url_for('logout') }}">
+            <button>Logout</button>
+        </a>
+    </div>
 
-    <p>Forgot your password?</p>
-    <a href="{{ url_for('forgot_password') }}">
-        <button>Reset Password</button>
-    </a>
+    <div>
+        <ul class="navbar">
+            <li><a href="/rooms">View Rooms</a></li>
+            <li><a href="/reservations">View Reservations</a></li>
+            <li><a href="/reserve">Make a Reservation</a></li>
+        </ul>
+    </div>
 
-    <br><br>
-    <a href="/"><button>Home</button></a>
+    <h1 id="main_header">Signin</h1>
+    <div id="wrapper">
+        <span id="left_side">
+            <h4 id="side_header">Go Home</h4>
+            <button id="returnbtn" onclick="location.href='/'">Click me</button>
+        </span>
+
+        <span id="middle_side">
+        <form method="POST" action="{{ url_for('signin') }}">
+            <label for="identifier">Email or Username:</label>
+            <input type="text" id="identifier" name="identifier" required><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required><br>
+            <button class="submit_btn" type="submit">Sign In</button>
+        </form>
+
+        <p>Don't have an account?</p>
+        <a href="{{ url_for('signup') }}">
+            <button>Sign Up</button>
+        </a>
+
+        <p>Forgot your password?</p>
+        <a href="{{ url_for('forgot_password') }}">
+            <button>Reset Password</button>
+        </a>
+        </span>
+        
+
+        <span id="right_side">
+            <h4 id="side_header">Our Hotel Selection</h4>
+            <button id="returnbtn" onclick="location.href='/rooms'">Click me</button>
+        </span>
+    </div>
 </body>
 </html>
