--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,44 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/forms.css') }}" rel="stylesheet">
+
+    <style>
+        #right_side, #left_side{
+            position: absolute;
+            bottom: 200px;
+        }
+        #left_side{
+            left:50px;
+        }
+        #middle_side{
+            width: 40%;
+        }
+        
+    </style>
 </head>
 <body>
-    <h2>Sign Up</h2>
-    <form method="POST">
-        <label>First Name:</label>
-        <input type="text" name="first_name" required><br>
-        <label>Last Name:</label>
-        <input type="text" name="last_name" required><br>
-        <label>Email:</label>
-        <input type="email" name="email" required><br>
-        <label>Phone Number:</label>
-        <input type="text" name="phone_number" required><br>
-        <label>Nationality:</label>
-        <input type="text" name="nationality" required><br>
-        <label>Username:</label>
-        <input type="text" name="username" required><br>
-        <label>Password:</label>
-        <input type="password" name="password" required><br>
-        
 
-        <label for="security_question">Security Question:</label>
-        <select id="security_question" name="security_question" required>
-            <option value="">Select a security question</option>
-            <option value="What is your favorite color?">What is your favorite color?</option>
-            <option value="What is your first teacher's name?">What is your first teacher's name?</option>
-            <option value="What is your favorite hobby?">What is your favorite hobby?</option>
-            <option value="What is your favorite year?">What is your favorite year?</option>
-            <option value="Who is your favorite friend's name?">Who is your favorite friend's name?</option>
-        </select><br>
+    <div class="head">
+        <img id="logo" src="/static/images/Big_logo.png" alt="hotel_logo">
+        <h1>Welcome to Hotel Reservation System</h1>
+        <h5>For our Advance Software Course</h5>
+        <a href="{{ url_for('logout') }}">
+            <button>Logout</button>
+        </a>
+    </div>
 
-    <label for="security_answer">Your Answer:</label>
-    <input type="text" id="security_answer" name="security_answer" required><br>
+    <div>
+        <ul class="navbar">
+            <li><a href="/rooms">View Rooms</a></li>
+            <li><a href="/reservations">View Reservations</a></li>
+            <li><a href="/reserve">Make a Reservation</a></li>
+        </ul>
+    </div>
 
-    <button type="submit">Sign Up</button>
-    </form>
+    <h1 id="main_header">Signup</h1>
+    <div id="wrapper">
 
-    <br><br>
-    <a href="/"><button>Home</button></a>
+
+        <span id="left_side">
+            <h4 id="side_header">Go Home</h4>
+            <button id="returnbtn" onclick="location.href='/'">Click me</button>
+        </span>
+
+        <span id="middle_side" style="margin-top: 0%;">
+            <form method="POST">
+                <label>First Name:</label>
+                <input type="text" name="first_name" required><br>
+                <label>Last Name:</label>
+                <input type="text" name="last_name" required><br>
+                <label>Email:</label>
+                <input type="email" name="email" required><br>
+                <label>Phone Number:</label>
+                <input type="text" name="phone_number" required><br>
+                <label>Nationality:</label>
+                <input type="text" name="nationality" required><br>
+                <label>Username:</label>
+                <input type="text" name="username" required><br>
+                <label>Password:</label>
+                <input type="password" name="password" required><br>
+                
+
+                <label for="security_question">Security Question:</label>
+                <select id="security_question" name="security_question" required>
+                    <option value="">Select a security question</option>
+                    <option value="What is your favorite color?">What is your favorite color?</option>
+                    <option value="What is your first teacher's name?">What is your first teacher's name?</option>
+                    <option value="What is your favorite hobby?">What is your favorite hobby?</option>
+                    <option value="What is your favorite year?">What is your favorite year?</option>
+                    <option value="Who is your favorite friend's name?">Who is your favorite friend's name?</option>
+                </select><br>
+
+            <label for="security_answer">Your Answer:</label>
+            <input type="text" id="security_answer" name="security_answer" required><br>
+
+            <button type="submit">Sign Up</button>
+            </form>
+        </span>
+
+
+        <span id="right_side">
+            <h4 id="side_header">Our Hotel Selection</h4>
+            <button id="returnbtn" onclick="location.href='/rooms'">Click me</button>
+        </span>
+
+    </div>
 </body>
 </html>
