--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -77,9 +77,9 @@
                 <label>Number of Guests:</label>
                 <input type="number" name="guests" class="form-control" min="1" max="5" required><br>
                 <label>Start Date:</label>
-                <input type="date" name="start_date" class="form-control" required><br>
+                <input type="date" name="start_date" class="form-control" required min="{{ current_date }}"><br>
                 <label>End Date:</label>
-                <input type="date" name="end_date" class="form-control" required><br>
+                <input type="date" name="end_date" class="form-control" required min="{{ current_date }}"><br>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             
